providers/aws/modules/security/security.tf
/*********************************************************************************************************************
Input Variables
*********************************************************************************************************************/

variable "vpc" {
  type = string
}

/*********************************************************************************************************************
Security Group
*********************************************************************************************************************/

resource "aws_security_group" "home_sg" {
  name = "instance-security-group"
  vpc_id = var.vpc

  ingress {
    cidr_blocks = ["104.183.222.206/32"]
    protocol = "tcp"
    from_port = 1
    to_port = 65535
    description = "10174 - All In"
  }

  egress {
    cidr_blocks = ["104.183.222.206/32"]
    from_port = 1
    protocol = "tcp"
    to_port = 65535
    description = "10174 - All Out"
  }

  tags = {
    Name = "10174"
  }
}
